# JapaneseTypingGame

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs
apps/desktop/src/features/audio-discrim/: audioDiscrimData.ts
apps/desktop/src/features/confusables/: confusablesData.ts
apps/desktop/src/features/db/: rowConversions.ts
apps/desktop/src/features/game/: GameCanvasHost.tsx  GameHud.tsx
apps/desktop/src/features/input/: ImeInputBox.tsx  (+2 more)
apps/desktop/src/pages/: AppleRescuePage.tsx  BossPage.tsx  ContentPacksPage.tsx  DevPage.tsx  DiagnosticPage.tsx  EvaluatorDevPage.tsx  GamePage.tsx  HomePage.tsx  HomePlaceholder.tsx  InputDevPage.tsx  LibraryPage.tsx  MistakesPage.tsx  ResultPage.tsx  RiverJumpPage.tsx  SettingsPage.tsx  SpaceBattlePage.tsx  TodayTrainingPage.tsx
apps/desktop/src/styles/: retro.css
apps/desktop/src/tauri/: invoke.ts
content/official/: audio-discrim-foundations.json  confusables-foundations.json  daily-life-foundations-500.json  n5-basic-mini.json  sentences-foundations.json
migrations/: 001_content.sql  002_progress.sql  003_sessions.sql  004_plans.sql  005_extras.sql  README.md
tests/e2e/: playwright.config.ts  smoke.spec.ts
(+13 files in other folders)
